[tool.poetry]
name = "chatgpt-flet"
version = "0.1.0"
description = ""
authors = ["Sungdon Kim <sehandev@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
flet = "^0.4.0"
typer = "^0.7.0"
revchatgpt = "^1.1.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
